mediumArticle/manifestoauth2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    meta.helm.sh/release-name: kubecost # can be removed if your application isn\'t deployed through Helm
    meta.helm.sh/release-namespace: kubecost # can be removed if your application isn\'t deployed through Helm
  labels:
    app.kubernetes.io/managed-by: Helm # can be removed if your application isn\'t deployed through Helm
  name: kubecost-oauth2-proxy-ingress
  namespace: medium
spec:
  ingressClassName: nginx
   # tls:
   #  - hosts:
   #      - kubecost-kris.unicorndomain.com
   #   secretName: kubecost-oauth2-proxy-ingress-tls-secret
  rules:
    - host: medium-demo.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: kubecost-oauth2-proxy-svc
                port:
                  number: 4180
